argo/services/studystack0/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: studystack0
  labels:
    app.kubernetes.io/name: studystack0
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: studystack0
  ports:
    - name: http
      port: 80
      targetPort: http
